@@ -1,3 +1,8 @@
+Release R2109:
+==============
+- enhancement: prefer default contructors and clear method over empty
+  string assignments
+ 
 Release R2108:
 ==============
 - fix: mutable element access must init with default value
